Hodext: better debugging on components

--- a/assets/index.html
+++ b/assets/index.html
@@ -4,6 +4,7 @@
   <head lang='en'>
     <title>Hodext</title>
     <link rel='stylesheet' href='./style/hodext.css'>
+    <script src='./script/debug.js'></script>
     <script>
       require('babel-register');
       require('../app/main');
